@@ -1,3 +1,6 @@
+[B]0.9.20[/B]
+Fix for artwork helper on home screen
+
 [B]0.9.19[/B]
 LEIA - Add artwork beef artwork helper support in videoinfodialog
 LEIA - Add support for artwork beef artwork helper for extrafanart
